@@ -20,8 +20,11 @@ apport (0.81) UNRELEASED; urgency=low
     do not yet have a working retracer chroot for.
   * bin/apport-retrace: Do not abort with an exception if package installation
     fails. Give a proper error message instead and point to -u. (LP: #115681)
+  * apport/crashdb_impl/launchpad.py, update(): Create a temporary directory
+    and use proper file names for the new attachments. With TemporaryFile(),
+    attachment file names ended up as '<fdopen>'. (LP: #115347)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 24 May 2007 09:37:43 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 24 May 2007 10:22:59 +0200
 
 apport (0.80) gutsy; urgency=low
 
